feat: verify roles to be presented in the JWT

--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
   "author": "FireBlink LTD",
   "license": "MIT",
   "dependencies": {
-    "@types/config": "^0.0.36",
-    "@types/cookie": "^0.3.3",
-    "@types/http-proxy": "^1.17.1",
-    "@types/jsonwebtoken": "^8.3.5",
-    "axios": "^0.19.0",
-    "config": "^3.2.4",
-    "cookie": "^0.4.0",
-    "http-proxy": "^1.18.0",
-    "jsonwebtoken": "^8.5.1",
-    "ts-log-debug": "^5.1.1"
+    "axios": "0.19.0",
+    "config": "3.2.4",
+    "cookie": "0.4.0",
+    "http-proxy": "1.18.0",
+    "js-yaml": "^3.13.1",
+    "jsonwebtoken": "8.5.1",
+    "ts-log-debug": "5.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/chai": "4.2.4",
+    "@types/config": "^0.0.36",
+    "@types/cookie": "^0.3.3",
+    "@types/http-proxy": "^1.17.1",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "12.12.7",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
