feat: fix .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,9 @@
 *
 
-!/src
-!/config/default.yml
-!/config/custom-environment-variables.yml
+!src
+!config/default.yml
+!config/custom-environment-variables.yml
 
-!/package.json
-!/yarn.lock
-!/tsconfig.json
+!package.json
+!yarn.lock
+!tsconfig.json
