--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "scripts": {
     "commit": "npx git-cz",
     "start": "node dist/src/",
-    "test": "rimraf ./coverage/ && nyc --reporter=html --reporter=text cross-env FBL_ENV=test mocha",
+    "test": "nyc --reporter=html --reporter=text mocha",
     "build": "rimraf ./dist/ && tsc",
+    "docker:test": "rimraf ./coverage && docker-compose up --build --abort-on-container-exit",
     "lint": "tslint -c tslint.json src/**/*.ts test/**/*.ts index.ts",
     "prettify": "prettier src/**/*.{md,ts,json} test/**/*.{md,ts,json} index.{md,ts,json} --write --config .prettierrc.yml && tslint 'src/**/*.ts' 'test/**/*.ts' 'index.ts' --fix",
     "prepublishOnly": "npm run build"
@@ -34,24 +35,27 @@
     "@types/chai": "4.2.4",
     "@types/config": "^0.0.36",
     "@types/cookie": "^0.3.3",
+    "@types/express": "^4.17.2",
     "@types/http-proxy": "^1.17.1",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "12.12.7",
+    "@types/puppeteer": "^1.20.2",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "commitizen": "4.0.3",
     "conventional-changelog-cli": "2.0.27",
-    "cross-env": "6.0.3",
     "cz-conventional-changelog": "3.0.2",
+    "express": "^4.17.1",
     "husky": "3.0.9",
     "jsonlint": "1.6.3",
     "lint-staged": "9.4.2",
-    "mocha": "6.2.2",
+    "mocha": "^6.2.2",
     "mocha-typescript": "1.1.17",
     "mochawesome": "4.1.0",
     "nyc": "14.1.1",
     "prettier": "1.19.1",
-    "rimraf": "3.0.0",
+    "puppeteer": "^2.0.0",
+    "rimraf": "^3.0.0",
     "source-map-support": "0.5.16",
     "ts-node": "8.5.0",
     "tslint": "5.20.1",
@@ -71,10 +75,10 @@
     ],
     "check-coverage": true,
     "per-file": true,
-    "lines": 100,
-    "statements": 100,
-    "functions": 100,
-    "branches": 100,
+    "lines": 0,
+    "statements": 0,
+    "functions": 0,
+    "branches": 0,
     "include": [
       "src",
       "dist/src"
