--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       APP_PATHS_CALLBACK: /oauth/callback
       APP_PATHS_LOGOUT: /logout
       APP_PATHS_HEALTH: /healthz
+      APP_REDIRECT_URL: /
       APP_COOKIE_SECURE: '0'
       APP_COOKIE_ACCESS_TOKEN: ACCESS_TOKEN
       APP_COOKIE_REFRESH_TOKEN: REFRESH_TOKEN
