--- a/test/keycloak-config/realm.yml
+++ b/test/keycloak-config/realm.yml
@@ -1,6 +1,14 @@
 pipeline:
-  'keycloak.realm.create':
-      credentials: $ref:secrets.credentials
-      realm: 
-        realm: $ref:ctx.realmName
-        enabled: true
+  '--':
+    - 'keycloak.realm.create':
+        credentials: $ref:secrets.credentials
+        realm: 
+          realm: $ref:ctx.realmName
+          enabled: true
+
+    # create realm role
+    - 'keycloak.realm.role.create':
+        credentials: $ref:secrets.credentials
+        realmName: $ref:ctx.realmName        
+        role:
+          name: realm_role
