fix: role bases authorization fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,9 @@ jobs:
           command: |
             docker-compose up --build --abort-on-container-exit
             
+
+      # generate coverage report
+      - run: ./node_modules/.bin/nyc report --reporter=text-lcov > ./coverage.lcov
+
+      # send test coverage
+      - run: bash <(curl -s https://codecov.io/bash) -f ./coverage.lcov
