--- a/test/keycloak-config/client.yml
+++ b/test/keycloak-config/client.yml
@@ -7,12 +7,12 @@ pipeline:
         client:      
           clientId: test
           enabled: true
-          publicClient: true
+          publicClient: false
           standardFlowEnabled: true
           serviceAccountsEnabled: true
           directAccessGrantsEnabled: true
           authorizationServicesEnabled: true
-          fullScopeAllowed: false
+          fullScopeAllowed: true
           
           protocol: openid-connect
           secret: 9067b642-015a-441a-816b-0c8d19305d10
@@ -22,7 +22,19 @@ pipeline:
               - http://127.0.0.1:8888/*
           
           webOrigins:
-            - '+'          
+            - '+'       
+            
+          defaultClientScopes:
+            - web-origins
+            - role_list
+            - profile
+            - roles
+            - email
+          
+          optionalClientScopes:
+            - address
+            - phone
+            - offline_access          
           
           protocolMappers:
             - name: Client Host
