--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,6 @@ jobs:
           name: Run tests
           command: |
             docker-compose up --build --abort-on-container-exit
-            
-
-      # generate coverage report
-      - run: ./node_modules/.bin/nyc report --reporter=text-lcov > ./coverage.lcov
-
+                  
       # send test coverage
-      - run: bash <(curl -s https://codecov.io/bash) -f ./coverage.lcov
+      - run: bash <(curl -s https://codecov.io/bash) -f ./report/coverage.lcov
