--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fireblink/keycloak-security-gateway",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Node.js based proxy service to secure applications and integrate with Keycloak SSO flow.",
   "keywords": [],
   "engines": {
@@ -24,8 +24,9 @@
     "axios": "0.19.0",
     "config": "3.2.4",
     "cookie": "0.4.0",
+    "ejs": "3.0.1",
     "http-proxy": "1.18.0",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "3.13.1",
     "jsonwebtoken": "8.5.1",
     "ts-log-debug": "5.1.1"
   },
@@ -33,29 +34,30 @@
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@types/chai": "4.2.6",
-    "@types/config": "^0.0.36",
-    "@types/cookie": "^0.3.3",
-    "@types/express": "^4.17.2",
-    "@types/http-proxy": "^1.17.2",
-    "@types/jsonwebtoken": "^8.3.5",
+    "@types/config": "0.0.36",
+    "@types/cookie": "0.3.3",
+    "@types/ejs": "3.0.0",
+    "@types/express": "4.17.2",
+    "@types/http-proxy": "1.17.2",
+    "@types/jsonwebtoken": "8.3.5",
     "@types/node": "12.12.14",
-    "@types/puppeteer": "^2.0.0",
+    "@types/puppeteer": "2.0.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "commitizen": "4.0.3",
     "conventional-changelog-cli": "2.0.28",
     "cz-conventional-changelog": "3.0.2",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "husky": "3.1.0",
     "jsonlint": "1.6.3",
     "lint-staged": "9.5.0",
-    "mocha": "^6.2.2",
+    "mocha": "6.2.2",
     "mocha-typescript": "1.1.17",
     "mochawesome": "4.1.0",
     "nyc": "14.1.1",
     "prettier": "1.19.1",
-    "puppeteer": "^2.0.0",
-    "rimraf": "^3.0.0",
+    "puppeteer": "2.0.0",
+    "rimraf": "3.0.0",
     "source-map-support": "0.5.16",
     "ts-node": "8.5.4",
     "tslint": "5.20.1",
