feat: support multiple KC clients

--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -7,8 +7,9 @@ log:
   level: APP_LOG_LEVEL
 
 keycloak:
-  clientId: APP_KEYCLOAK_CLIENT_ID
-  clientSecret: APP_KEYCLOAK_CLIENT_SECRET
+  clients:
+    __name: APP_KEYCLOAK_CLIENTS
+    __format: json
   realmURL:
     public: APP_KEYCLOAK_PUBLIC_REALM_URL
     private: APP_KEYCLOAK_PRIVATE_REALM_URL
