test: add emailVerified=true for the test user

--- a/test/keycloak-config/user.yml
+++ b/test/keycloak-config/user.yml
@@ -13,6 +13,7 @@ pipeline:
               value: test
 
           email: john@domain.com
+          emailVerified: true
           firstName: John
           lastName: Doe
 
