--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -31,6 +31,7 @@ paths:
   callback: APP_PATHS_CALLBACK
   logout: APP_PATHS_LOGOUT
   health: APP_PATHS_HEALTH
+  roles: APP_PATHS_ROLES
 
 logoutRedirectURL: APP_LOGOUT_REDIRECT_URL
 
