--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "author": "FireBlink LTD",
   "license": "MIT",
   "dependencies": {
+    "@tsed/logger": "^5.5.0",
     "axios": "0.19.2",
     "config": "3.3.1",
     "cookie": "0.4.1",
     "ejs": "3.1.3",
     "http-proxy": "1.18.1",
     "js-yaml": "3.14.0",
-    "jsonwebtoken": "8.5.1",
-    "ts-log-debug": "5.5.0"
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
